### Changed - レイアウト調整

--- a/views/addOns/index.ejs
+++ b/views/addOns/index.ejs
@@ -11,74 +11,76 @@ PO-01
 <script src="/js/master/addOns/index.js"></script>
 <%- contentFor('body') %>
 
-<div class="form-container search p-3 bg-light-gray mb-3">
-    <form method="post">
-        <%- include('../common/master/_hidden') %>
+<div class="card">
+    <div class="card-body search">
+        <form method="post">
+            <%- include('../common/master/_hidden') %>
 
-        <div class="menu-group">
-            <% if (message !== '') { %>
-            <p class="error message text-danger panel-body bg-danger">
-                <%= message %>
-            </p>
-            <% } %>
-        </div>
-
-        <div class="form-group">
-            <label for="id" class="">
-                オファーID
-            </label>
-            <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64>
-        </div>
-
-        <!-- <div class="form-group">
-            <label for="name" class="">
-                名称
-            </label>
-            <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
-        </div> -->
-
-        <!-- <div class="form-group">
-            <label for="" class="">
-                単価
-            </label>
-            <div class="input-group">
-                <select class="form-control" name="priceSpecification[referenceQuantity][value]">
-                    <option value="">---</option>
-                    <% for (let i = 1; i <= 1; i++) { %>
-                    <option value="<%= i %>">
-                        <%= i %>
-                    </option>
-                    <% } %>
-                </select>
-
-                <div class="input-group-append">
-                    <span class="input-group-text">枚あたり</span>
-                </div>
-
-                <input class="form-control" placeholder="" maxlength=10 name="priceSpecification[minPrice]"
-                    id="priceSpecification[minPrice]" value="" />
-
-                <div class="input-group-append">
-                    <span class="input-group-text">円以上</span>
-                </div>
-
-                <input class="form-control" placeholder="" maxlength=10 name="priceSpecification[maxPrice]"
-                    id="priceSpecification[maxPrice]" value="" />
-
-                <div class="input-group-append">
-                    <span class="input-group-text">円以下</span>
-                </div>
+            <div class="menu-group">
+                <% if (message !== '') { %>
+                <p class="error message text-danger panel-body bg-danger">
+                    <%= message %>
+                </p>
+                <% } %>
             </div>
-        </div> -->
 
-        <div class="panel-body">
-            <a class="btn btn-primary" role="button" href="/addOns/new">
-                <i class=" fa fa-plus"></i> 登録</a>
+            <div class="form-group bmd-form-group">
+                <label for="id" class="bmd-label-static">
+                    オファーID
+                </label>
+                <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64>
+            </div>
 
-            <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-            <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-        </div>
-    </form>
+            <!-- <div class="form-group">
+                <label for="name" class="">
+                    名称
+                </label>
+                <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
+            </div> -->
+
+            <!-- <div class="form-group">
+                <label for="" class="">
+                    単価
+                </label>
+                <div class="input-group">
+                    <select class="form-control" name="priceSpecification[referenceQuantity][value]">
+                        <option value="">---</option>
+                        <% for (let i = 1; i <= 1; i++) { %>
+                        <option value="<%= i %>">
+                            <%= i %>
+                        </option>
+                        <% } %>
+                    </select>
+    
+                    <div class="input-group-append">
+                        <span class="input-group-text">枚あたり</span>
+                    </div>
+    
+                    <input class="form-control" placeholder="" maxlength=10 name="priceSpecification[minPrice]"
+                        id="priceSpecification[minPrice]" value="" />
+    
+                    <div class="input-group-append">
+                        <span class="input-group-text">円以上</span>
+                    </div>
+    
+                    <input class="form-control" placeholder="" maxlength=10 name="priceSpecification[maxPrice]"
+                        id="priceSpecification[maxPrice]" value="" />
+    
+                    <div class="input-group-append">
+                        <span class="input-group-text">円以下</span>
+                    </div>
+                </div>
+            </div> -->
+
+            <div class="panel-body">
+                <a class="btn btn-primary" role="button" href="/addOns/new">
+                    <i class=" fa fa-plus"></i> 登録</a>
+
+                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 <div class="form-container search">
@@ -88,49 +90,48 @@ PO-01
         検索結果$searched_count$件
     </p> -->
     <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
-        <table class="table table-bordered table-striped mb-0">
-            <thead>
-                <tr>
-                    <th>オファーコード</th>
-                    <th>名称</th>
-                    <th>発生金額<br>適用単位</th>
-                    <th>アイテム</th>
-                    <th></th>
-                </tr>
-            </thead>
+        <div class="card">
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead class="text-primary">
+                            <tr>
+                                <th>オファーコード</th>
+                                <th>名称</th>
+                                <th>発生金額<br>適用単位</th>
+                                <th>アイテム</th>
+                                <th></th>
+                            </tr>
+                        </thead>
 
-            <tbody>
-                <tr id="templateRow">
-                    <td name="id__identifier">
-                        <p>
-                            <a target="_blank" href="/addOns/$id$/update">
-                                $identifier$
-                            </a>
-                        </p>
-                    <td name="name.ja">$name.ja$</td>
-                    <td name="priceSpecification.price__priceSpecification.priceCurrency__referenceQuantity.value"
-                        style="text-align:right;">
-                        <p>$priceSpecification.price$ $priceSpecification.priceCurrency$</p>
-                        <p>/ $referenceQuantity.value$ 枚</p>
-                    </td>
-                    <td name="itemOffered.name.ja">$itemOffered.name.ja$</td>
-                    <td name="id__id__id" class="center">
-                        <div class="text-center">
-                            <a target="_blank" class="btn btn-sm btn-primary" href="/addOns/$id$/update">
-                                <i class="fas fa-edit"></i>
-                            </a>
-                        </div>
-
-                        <div class="text-center mt-2">
-                            <a href="javascript:void(0)" class="btn btn-sm btn-outline-primary showAdditionalProperty"
-                                data-id="$id$">
-                                <span>追加特性</span>
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                        <tbody>
+                            <tr id="templateRow">
+                                <td name="id__identifier">
+                                    <a target="_blank" href="/addOns/$id$/update">
+                                        $identifier$
+                                    </a>
+                                <td name="name.ja">$name.ja$</td>
+                                <td name="priceSpecification.price__priceSpecification.priceCurrency__referenceQuantity.value"
+                                    style="text-align:right;">
+                                    $priceSpecification.price$ $priceSpecification.priceCurrency$ /
+                                    $referenceQuantity.value$
+                                </td>
+                                <td name="itemOffered.name.ja">$itemOffered.name.ja$</td>
+                                <td name="id__id__id" class="text-center">
+                                    <a target="_blank" class="btn btn-sm btn-primary" href="/addOns/$id$/update">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                    <a href="javascript:void(0)"
+                                        class="btn btn-sm btn-outline-primary showAdditionalProperty" data-id="$id$">
+                                        <span>追加特性</span>
+                                    </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="pager" class="div_pager_parent"></div>
 </div>
