--- a/views/places/seat/index.ejs
+++ b/views/places/seat/index.ejs
@@ -19,8 +19,9 @@ ST-01
             <div class="menu-group">
             </div>
 
-            <div class="form-group">
-                <label for="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]" class="">
+            <div class="form-group bmd-form-group">
+                <label for="containedInPlace[containedInPlace][containedInPlace][branchCode][$eq]"
+                    class="bmd-label-static">
                     劇場
                 </label>
                 <select class="form-control"
@@ -34,8 +35,8 @@ ST-01
                 </select>
             </div>
 
-            <div class="form-group">
-                <label for="branchCode[$eq]" class="">
+            <div class="form-group bmd-form-group">
+                <label for="branchCode[$eq]" class="bmd-label-static">
                     座席コード
                 </label>
                 <input class="form-control" name="branchCode[$eq]">
@@ -106,14 +107,11 @@ ST-01
                                 <td name="seatingTypeStr">
                                     $seatingTypeStr$<br>
                                 </td>
-                                <td name="id" class="">
-                                    <div class="text-center">
-                                        <a href="javascript:void(0)"
-                                            class="btn btn-sm btn-outline-primary showAdditionalProperty"
-                                            data-id="$id$">
-                                            <span>追加特性</span>
-                                        </a>
-                                    </div>
+                                <td name="id" class="text-center">
+                                    <a href="javascript:void(0)"
+                                        class="btn btn-sm btn-outline-primary showAdditionalProperty" data-id="$id$">
+                                        <span>追加特性</span>
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
