--- a/views/places/movieTheater/index.ejs
+++ b/views/places/movieTheater/index.ejs
@@ -19,8 +19,8 @@ Aa-12
             <div class="menu-group">
             </div>
 
-            <div class="form-group">
-                <label for="name" class="">
+            <div class="form-group bmd-form-group">
+                <label for="name" class="bmd-label-static">
                     名称
                 </label>
                 <input class="form-control" name="name" id="name" placeholder="" maxlength=64>
@@ -78,20 +78,16 @@ Aa-12
                                     <br>$availabilityStartsGraceTimeInDays$日前
                                     <br>$availabilityEndsGraceTimeInMinutes$
                                 </td>
-                                <td name="branchCode__id" class="">
-                                    <div class="text-center">
-                                        <a href="javascript:void(0)"
-                                            class="btn btn-sm btn-outline-primary showAdditionalProperty"
-                                            data-branchCode="$branchCode$">
-                                            <span>追加特性</span>
-                                        </a>
-                                    </div>
-                                    <div class="text-center">
-                                        <a href="javascript:void(0)"
-                                            class="btn btn-sm btn-outline-secondary showContainsPlace" data-id="$id$">
-                                            <span>スクリーン情報</span>
-                                        </a>
-                                    </div>
+                                <td name="branchCode__id" class="text-center">
+                                    <a href="javascript:void(0)"
+                                        class="btn btn-sm btn-outline-primary showAdditionalProperty"
+                                        data-branchCode="$branchCode$">
+                                        <span>追加特性</span>
+                                    </a>
+                                    <a href="javascript:void(0)"
+                                        class="btn btn-sm btn-outline-secondary showContainsPlace" data-id="$id$">
+                                        <span>スクリーン</span>
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
