--- a/views/places/screeningRoom/index.ejs
+++ b/views/places/screeningRoom/index.ejs
@@ -19,8 +19,8 @@ SR-01
             <div class="menu-group">
             </div>
 
-            <div class="form-group">
-                <label for="containedInPlace[branchCode][$eq]" class="">
+            <div class="form-group bmd-form-group">
+                <label for="containedInPlace[branchCode][$eq]" class="bmd-label-static">
                     劇場
                 </label>
                 <select class="form-control" name="containedInPlace[branchCode][$eq]">
@@ -88,14 +88,12 @@ SR-01
                                 <td name="openSeatingAllowed">
                                     $openSeatingAllowed$<br>
                                 </td>
-                                <td name="branchCode__id" class="">
-                                    <div class="text-center">
-                                        <a href="javascript:void(0)"
-                                            class="btn btn-sm btn-outline-primary showAdditionalProperty"
-                                            data-branchCode="$branchCode$">
-                                            <span>追加特性</span>
-                                        </a>
-                                    </div>
+                                <td name="branchCode__id" class="text-center">
+                                    <a href="javascript:void(0)"
+                                        class="btn btn-sm btn-outline-primary showAdditionalProperty"
+                                        data-branchCode="$branchCode$">
+                                        <span>追加特性</span>
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
