--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -12,27 +12,29 @@ PR-00
 
 <%- contentFor('body') %>
 
-<div class="form-container search mb-3 searchProducts">
-    <form method="post" class="p-3 bg-light-gray">
-        <%- include('../common/master/_hidden') %>
-        <div class="menu-group">
-        </div>
+<div class="card">
+    <div class="card-body search searchProducts">
+        <form method="post">
+            <%- include('../common/master/_hidden') %>
+            <div class="menu-group">
+            </div>
 
-        <div class="form-group">
-            <label for="name[$regex]" class="">
-                名称
-            </label>
-            <input class="form-control" name="name[$regex]" id="name[$regex]" placeholder="" maxlength=64 value="">
-        </div>
+            <div class="form-group bmd-form-group">
+                <label for="name[$regex]" class="bmd-label-static">
+                    名称
+                </label>
+                <input class="form-control" name="name[$regex]" id="name[$regex]" placeholder="" maxlength=64 value="">
+            </div>
 
-        <div class="panel-body">
-            <a class="btn btn-primary" role="button" href="/products/new">
-                <i class=" fa fa-plus"></i> 登録</a>
+            <div class="panel-body">
+                <a class="btn btn-primary" role="button" href="/products/new">
+                    <i class=" fa fa-plus"></i> 登録</a>
 
-            <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
-            <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
-        </div>
-    </form>
+                <button type="button" class="reset-condition btn btn-secondary float-right">検索内容リセット</button>
+                <button type="button" class="btn search btn-ok btn-success float-right">検索</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 <div class="form-container search">
@@ -41,25 +43,31 @@ PR-00
     <!-- <p class="mb-3" id="searchedCount" style="display:none;">
         検索結果 $searched_count$件
     </p> -->
-    <div id="list" class="scroll-horizontal text-small mb-3" style="display:none;">
-        <table class="table table-bordered table-striped mb-0">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>名称</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr id="templateRow">
-                    <td name="id__id">
-                        <a target="_blank" href="/products/$id$">$id$</a>
-                    </td>
-                    <td name="name.ja">
-                        $name.ja$
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <div id="list" style="display:none;">
+        <div class="card">
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead class="text-primary">
+                            <tr>
+                                <th>ID</th>
+                                <th>名称</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr id="templateRow">
+                                <td name="id__id">
+                                    <a target="_blank" href="/products/$id$">$id$</a>
+                                </td>
+                                <td name="name.ja">
+                                    $name.ja$
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="pager" class="div_pager_parent"></div>
 </div>
