--- a/views/ticketTypeGroup/index.ejs
+++ b/views/ticketTypeGroup/index.ejs
@@ -22,7 +22,7 @@ Aa-8
             </div>
 
             <div class="form-row">
-                <div class="form-group bmd-form-group col-md-6">
+                <div class="form-group bmd-form-group col-md-3">
                     <label for="identifier" class="bmd-label-static">
                         券種グループコード
                     </label>
@@ -30,11 +30,15 @@ Aa-8
                         maxlength=64>
                 </div>
 
-                <div class="form-group bmd-form-group col-md-6">
+                <div class="form-group bmd-form-group col-md-3">
                     <label for="name" class="bmd-label-static">
                         券種グループ名
                     </label>
                     <input type="text" class="form-control" name="name" id="name" placeholder="" maxlength=64>
+                </div>
+                <div class="form-group bmd-form-group col-md-3">
+                </div>
+                <div class="form-group bmd-form-group col-md-3">
                 </div>
             </div>
 
