### Changed - レイアウト調整

--- a/views/ticketType/_listTicketTypeGroup.ejs
+++ b/views/ticketType/_listTicketTypeGroup.ejs
@@ -9,9 +9,9 @@
             </div>
             <div class="modal-body">
                 <div class="panel-body">
-                    <div id="list" class="table-responsive scroll-vertical" style="display:block;">
-                        <table class="table table-bordered table-striped mb-0">
-                            <thead>
+                    <div id="list" class="table-responsive">
+                        <table class="table">
+                            <thead class="text-primary">
                                 <tr>
                                     <th>券種グループ名</th>
                                 </tr>
