--- a/views/ticketType/index.ejs
+++ b/views/ticketType/index.ejs
@@ -50,13 +50,13 @@ Aa-6
                 </div>
 
                 <div class="form-group bmd-form-group col-md-3">
-                    <label for="category[id]" class="bmd-label-static">
+                    <label for="category[codeValue]" class="bmd-label-static">
                         オファーカテゴリー
                     </label>
-                    <select class="form-control" name="category[id]">
+                    <select class="form-control" name="category[codeValue]">
                         <option value="">---</option>
                         <% ticketTypeCategories.forEach((category) => { %>
-                        <option value="<%= category.id %>">
+                        <option value="<%= category.codeValue %>">
                             <%= category.name.ja %>
                         </option>
                         <% }) %>
